fix hero image on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -233,16 +233,21 @@ h6 {
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
-#hero {
-  width: 100%;
-  height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
-  background-size: cover;
+@media (min-width: 768px) {
+  #hero {
+    width: 100%;
+    height: 100vh;
+    background: url("../img/hero-bg.jpg") top center;
+    background-size: cover;
+  }
 }
 
 @media (max-width: 768px) {
   #hero {
+    width: 100%;
+    height: 100vh;
     background: url("../img/hero-bg-small.jpg") top center;
+    background-size: cover;
   }
 }
 
